Make the title text in the hero 15% smaller

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "gen-lang-client-0325964556"
+    "default": "monospace-2"
   },
   "targets": {},
   "etags": {}
